oh mann, eine menge passiert

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SQLALCHEMY_DATABASE_URI=postgresql://postgres.ymjaliwvpuvhkevhguwd:xf4CKBawMd-q2Q*@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+FRIENDS=Adrian,Anna,Annika,Bjarne,Colin,Connor,Eike,Elias,Finn,Jara,Johannes,Joseph,Lilith,Richard,Simon,Timo
+LAST_UPDATE_DATE=2024-11-07
